fix: prevent long text overflow

--- a/src/components/molecules/FlintWSCContent.jsx/_FlintWSCContent.scss
+++ b/src/components/molecules/FlintWSCContent.jsx/_FlintWSCContent.scss
@@ -76,6 +76,10 @@
     padding: 10px 12px;
     border: 1px solid #383534;
 
+    & .value{
+      word-break: break-all;
+    }
+
     & > div {
       display: flex;
       align-items: center;
